force-app/main/default/objects/SalesLedgerInformation__c/SalesLedgerInformation__c.object-meta.xml
<CustomObject>
    <description>매출원장정보</description>
    <label>매출원장정보</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>