force-app/main/default/objects/SalesLedgerInformation__c/fields/BARCD_NO__c.field-meta.xml
<CustomField>
    <fullName>BARCD_NO__c</fullName>
    <label>Bar code number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>