force-app/main/default/objects/SalesLedgerInformation__c/fields/BAS_TKSTK_QTY__c.field-meta.xml
<CustomField>
    <fullName>BAS_TKSTK_QTY__c</fullName>
    <label>Actual weight</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>