force-app/main/default/objects/SalesLedgerInformation__c/fields/BAS_UNIT_CD__c.field-meta.xml
<CustomField>
    <fullName>BAS_UNIT_CD__c</fullName>
    <label>Actual weight unit code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>