force-app/main/default/objects/SalesLedgerInformation__c/fields/BCNR_ID__c.field-meta.xml
<CustomField>
    <fullName>BCNR_ID__c</fullName>
    <label>Partner code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>