force-app/main/default/objects/SalesLedgerInformation__c/fields/BILI_DOC_NO__c.field-meta.xml
<CustomField>
    <fullName>BILI_DOC_NO__c</fullName>
    <externalId>true</externalId>
    <label>Billing document number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>