force-app/main/default/objects/SalesLedgerInformation__c/fields/BL_NO__c.field-meta.xml
<CustomField>
    <fullName>BL_NO__c</fullName>
    <label>BL number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>