force-app/main/default/objects/SalesLedgerInformation__c/fields/BOX_CTCNT_QTY__c.field-meta.xml
<CustomField>
    <fullName>BOX_CTCNT_QTY__c</fullName>
    <label>Commodity Box Acquisition Volume</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>