force-app/main/default/objects/SalesLedgerInformation__c/fields/BRC_ID__c.field-meta.xml
<CustomField>
    <fullName>BRC_ID__c</fullName>
    <label>BRC_ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>240</fullName>
                <label>FS개발)개발담당</label>
            </value>
            <value>
                <fullName>151</fullName>
                <label>원료)원료사업부 지원</label>
            </value>
            <value>
                <fullName>146</fullName>
                <label>원료)원료시너지팀</label>
            </value>
            <value>
                <fullName>235</fullName>
                <label>원료)축산시너지팀</label>
            </value>
            <value>
                <fullName>225</fullName>
                <label>FS개발)개발1팀</label>
            </value>
            <value>
                <fullName>226</fullName>
                <label>FS개발)개발2팀</label>
            </value>
            <value>
                <fullName>227</fullName>
                <label>FS개발)동부개발팀</label>
            </value>
            <value>
                <fullName>228</fullName>
                <label>FS개발)서부개발팀</label>
            </value>
            <value>
                <fullName>229</fullName>
                <label>FS개발)호남개발팀</label>
            </value>
            <value>
                <fullName>232</fullName>
                <label>FS개발)FS개발지원팀</label>
            </value>
            <value>
                <fullName>247</fullName>
                <label>외식중부)외식3팀</label>
            </value>
            <value>
                <fullName>264</fullName>
                <label>외식남부)외식동부팀</label>
            </value>
            <value>
                <fullName>271</fullName>
                <label>외식남부)외식서부팀</label>
            </value>
            <value>
                <fullName>184</fullName>
                <label>원료)축산시너지팀(푸드빌)</label>
            </value>
            <value>
                <fullName>185</fullName>
                <label>원료)그룹시너지팀(푸드빌)</label>
            </value>
            <value>
                <fullName>187</fullName>
                <label>원료)그룹시너지팀(FV기타)</label>
            </value>
            <value>
                <fullName>322</fullName>
                <label>급식)급식솔루션동부1팀</label>
            </value>
            <value>
                <fullName>323</fullName>
                <label>급식)급식솔루션서부팀</label>
            </value>
            <value>
                <fullName>198</fullName>
                <label>디지털)프레시마켓</label>
            </value>
            <value>
                <fullName>337</fullName>
                <label>급식)급식솔루션동부2팀</label>
            </value>
            <value>
                <fullName>353</fullName>
                <label>FS개발)컨세션개발팀</label>
            </value>
            <value>
                <fullName>251</fullName>
                <label>외식중부)외식솔루션영업팀</label>
            </value>
            <value>
                <fullName>347</fullName>
                <label>유통중부)유통글로벌식재팀</label>
            </value>
            <value>
                <fullName>246</fullName>
                <label>외식중부)외식중부지원</label>
            </value>
            <value>
                <fullName>270</fullName>
                <label>외식남부)외식남부지원</label>
            </value>
            <value>
                <fullName>320</fullName>
                <label>급식)급식솔루션1팀</label>
            </value>
            <value>
                <fullName>321</fullName>
                <label>급식)급식솔루션2팀</label>
            </value>
            <value>
                <fullName>325</fullName>
                <label>급식)급식솔루션지원</label>
            </value>
            <value>
                <fullName>338</fullName>
                <label>아이누리)아이누리지원</label>
            </value>
            <value>
                <fullName>346</fullName>
                <label>튼튼스쿨)튼튼스쿨2팀</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>