force-app/main/default/objects/SalesLedgerInformation__c/fields/CRG_MA__c.field-meta.xml
<CustomField>
    <fullName>CRG_MA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRG_MA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CRG_MAs</relationshipName>
    <type>Lookup</type>
</CustomField>