force-app/main/default/objects/SalesLedgerInformation__c/fields/CRG_MA_ID__c.field-meta.xml
<CustomField>
    <fullName>CRG_MA_ID__c</fullName>
    <externalId>true</externalId>
    <label>MA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>