force-app/main/default/objects/SalesLedgerInformation__c/fields/CRG_SMA__c.field-meta.xml
<CustomField>
    <fullName>CRG_SMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRG_SMA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CRG_SMAs</relationshipName>
    <type>Lookup</type>
</CustomField>