force-app/main/default/objects/SalesLedgerInformation__c/fields/DIV_ID__c.field-meta.xml
<CustomField>
    <fullName>DIV_ID__c</fullName>
    <label>SU Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2200</fullName>
                <label>FS전략사업부</label>
            </value>
            <value>
                <fullName>3100</fullName>
                <label>FS개발사업부</label>
            </value>
            <value>
                <fullName>3900</fullName>
                <label>외식남부사업부</label>
            </value>
            <value>
                <fullName>4100</fullName>
                <label>아이누리사업부</label>
            </value>
            <value>
                <fullName>4400</fullName>
                <label>외식중부사업부</label>
            </value>
            <value>
                <fullName>4600</fullName>
                <label>전략사업부</label>
            </value>
            <value>
                <fullName>4700</fullName>
                <label>급식솔루션사업부</label>
            </value>
            <value>
                <fullName>4701</fullName>
                <label>유통중부사업부</label>
            </value>
            <value>
                <fullName>4705</fullName>
                <label>헬씨누리사업부</label>
            </value>
            <value>
                <fullName>4706</fullName>
                <label>유통남부사업부</label>
            </value>
            <value>
                <fullName>4709</fullName>
                <label>튼튼스쿨사업부</label>
            </value>
            <value>
                <fullName>4710</fullName>
                <label>외식SU직속</label>
            </value>
            <value>
                <fullName>4712</fullName>
                <label>영업본부직속</label>
            </value>
            <value>
                <fullName>4714</fullName>
                <label>유통SU직속</label>
            </value>
            <value>
                <fullName>4716</fullName>
                <label>급식SU직속</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>