force-app/main/default/objects/SalesLedgerInformation__c/fields/DSTR_HIS_MNG_YN_NM__c.field-meta.xml
<CustomField>
    <fullName>DSTR_HIS_MNG_YN_NM__c</fullName>
    <label>Distribution history number type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>