force-app/main/default/objects/SalesLedgerInformation__c/fields/DSTR_HIS_NO__c.field-meta.xml
<CustomField>
    <fullName>DSTR_HIS_NO__c</fullName>
    <label>History number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>