force-app/main/default/objects/SalesLedgerInformation__c/fields/fm_MyData__c.field-meta.xml
<CustomField>
    <fullName>fm_MyData__c</fullName>
    <formula>IF( OR( CRG_MA__r.Id = $User.Id , CRG_SMA__r.Id = $User.Id ) , &quot;Y&quot; , &quot;N&quot; )</formula>
    <label>MyData</label>
    <type>Text</type>
</CustomField>