force-app/main/default/objects/SalesLedgerInformation__c/fields/fm_OurHeadOffice__c.field-meta.xml
<CustomField>
    <fullName>fm_OurHeadOffice__c</fullName>
    <formula>if( Text(CRG_MA__r.HeadOffice__c) =  Text($User.HeadOffice__c) , &quot;Y&quot; , &quot;N&quot; )</formula>
    <label>OurHeadOffice</label>
    <type>Text</type>
</CustomField>