force-app/main/default/objects/SalesLedgerInformation__c/fields/fm_OurSu__c.field-meta.xml
<CustomField>
    <fullName>fm_OurSu__c</fullName>
    <formula>If( Text(  CRG_MA__r.SU__c  ) =  Text($User.SU__c) , &quot;Y&quot; , &quot;N&quot; )</formula>
    <label>OurSu</label>
    <type>Text</type>
</CustomField>