force-app/main/default/objects/SalesLedgerInformation__c/fields/fm_OurTeam__c.field-meta.xml
<CustomField>
    <fullName>fm_OurTeam__c</fullName>
    <formula>if( Text(CRG_MA__r.Team__c ) = Text($User.Team__c) , &quot;Y&quot; , &quot;N&quot; )</formula>
    <label>OurTeam</label>
    <type>Text</type>
</CustomField>