force-app/main/default/objects/SalesLedgerInformation__c/fields/fm_SalesCost__c.field-meta.xml
<CustomField>
    <fullName>fm_SalesCost__c</fullName>
    <formula>ORDR_REAL_BUY_UNPRC__c *  RLSTK_UNIT_RLSTK_QTY__c</formula>
    <label>Sales Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>