force-app/main/default/objects/SalesLedgerInformation__c/fields/fm_SalesProfit__c.field-meta.xml
<CustomField>
    <fullName>fm_SalesProfit__c</fullName>
    <formula>( SALE_UNPRC__c -  ORDR_REAL_BUY_UNPRC__c  ) *  RLSTK_UNIT_RLSTK_QTY__c</formula>
    <label>Sales Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>