force-app/main/default/objects/SalesLedgerInformation__c/fields/GD__c.field-meta.xml
<CustomField>
    <fullName>GD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GD</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>GDs</relationshipName>
    <type>Lookup</type>
</CustomField>