force-app/main/default/objects/SalesLedgerInformation__c/fields/GD_CLS_ID__c.field-meta.xml
<CustomField>
    <fullName>GD_CLS_ID__c</fullName>
    <label>GD_CLS_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>