force-app/main/default/objects/SalesLedgerInformation__c/fields/GD_CLS_NM__c.field-meta.xml
<CustomField>
    <fullName>GD_CLS_NM__c</fullName>
    <label>Product classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>