force-app/main/default/objects/SalesLedgerInformation__c/fields/GD_NO__c.field-meta.xml
<CustomField>
    <fullName>GD_NO__c</fullName>
    <externalId>true</externalId>
    <label>Product code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>