force-app/main/default/objects/SalesLedgerInformation__c/fields/InterimSettlementOfAccounts__c.field-meta.xml
<CustomField>
    <fullName>InterimSettlementOfAccounts__c</fullName>
    <formula>SALES_AT__c / Day(Today()) * 30</formula>
    <label>Interim settlement of accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>