force-app/main/default/objects/SalesLedgerInformation__c/fields/ISLIQ__c.field-meta.xml
<CustomField>
    <fullName>ISLIQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liquor status</label>
    <type>Checkbox</type>
</CustomField>