force-app/main/default/objects/SalesLedgerInformation__c/fields/MID_GD_CLS_ID__c.field-meta.xml
<CustomField>
    <fullName>MID_GD_CLS_ID__c</fullName>
    <label>MID_GD_CLS_ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1001</fullName>
                <label>유지가공품</label>
            </value>
            <value>
                <fullName>1002</fullName>
                <label>분말가공품</label>
            </value>
            <value>
                <fullName>1003</fullName>
                <label>상온가공식품</label>
            </value>
            <value>
                <fullName>1004</fullName>
                <label>조미식품</label>
            </value>
            <value>
                <fullName>1005</fullName>
                <label>김치/절임류</label>
            </value>
            <value>
                <fullName>1006</fullName>
                <label>냉동가공식품</label>
            </value>
            <value>
                <fullName>1007</fullName>
                <label>만두</label>
            </value>
            <value>
                <fullName>1008</fullName>
                <label>축산가공품(1008)</label>
            </value>
            <value>
                <fullName>1009</fullName>
                <label>면/떡류</label>
            </value>
            <value>
                <fullName>1010</fullName>
                <label>신선식품</label>
            </value>
            <value>
                <fullName>1011</fullName>
                <label>유제품</label>
            </value>
            <value>
                <fullName>1012</fullName>
                <label>편의식/가공품기타</label>
            </value>
            <value>
                <fullName>1013</fullName>
                <label>차/음료/기호식품</label>
            </value>
            <value>
                <fullName>1014</fullName>
                <label>가공부가상품</label>
            </value>
            <value>
                <fullName>2001</fullName>
                <label>양곡</label>
            </value>
            <value>
                <fullName>2002</fullName>
                <label>과일</label>
            </value>
            <value>
                <fullName>2003</fullName>
                <label>채소</label>
            </value>
            <value>
                <fullName>2004</fullName>
                <label>농산가공</label>
            </value>
            <value>
                <fullName>2005</fullName>
                <label>농산부가상품</label>
            </value>
            <value>
                <fullName>3001</fullName>
                <label>건수산물</label>
            </value>
            <value>
                <fullName>3002</fullName>
                <label>냉동수산물</label>
            </value>
            <value>
                <fullName>3003</fullName>
                <label>신선수산물</label>
            </value>
            <value>
                <fullName>3004</fullName>
                <label>수산부가상품</label>
            </value>
            <value>
                <fullName>4001</fullName>
                <label>우육원물(수입산)</label>
            </value>
            <value>
                <fullName>4002</fullName>
                <label>돈육원물(수입산)</label>
            </value>
            <value>
                <fullName>4003</fullName>
                <label>닭/오리(해외생산)</label>
            </value>
            <value>
                <fullName>4004</fullName>
                <label>양고기</label>
            </value>
            <value>
                <fullName>4005</fullName>
                <label>우육원물(국산)</label>
            </value>
            <value>
                <fullName>4006</fullName>
                <label>돈육원물(국산)</label>
            </value>
            <value>
                <fullName>4007</fullName>
                <label>세절우돈육</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>