force-app/main/default/objects/SalesLedgerInformation__c/fields/MNGPLC_ID__c.field-meta.xml
<CustomField>
    <fullName>MNGPLC_ID__c</fullName>
    <label>Management Place code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>