force-app/main/default/objects/SalesLedgerInformation__c/fields/OPT_UNPRC__c.field-meta.xml
<CustomField>
    <fullName>OPT_UNPRC__c</fullName>
    <label>an appropriate selling price</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>