force-app/main/default/objects/SalesLedgerInformation__c/fields/ORDR_DTL_NO__c.field-meta.xml
<CustomField>
    <fullName>ORDR_DTL_NO__c</fullName>
    <externalId>true</externalId>
    <label>ORDR_DTL_NO</label>
    <length>5</length>
    <type>Text</type>
</CustomField>