force-app/main/default/objects/SalesLedgerInformation__c/fields/ORDR_NO__c.field-meta.xml
<CustomField>
    <fullName>ORDR_NO__c</fullName>
    <externalId>true</externalId>
    <label>Order number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>