force-app/main/default/objects/SalesLedgerInformation__c/fields/ORDR_OPT_UNPRC__c.field-meta.xml
<CustomField>
    <fullName>ORDR_OPT_UNPRC__c</fullName>
    <label>an appropriate order price</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>