force-app/main/default/objects/SalesLedgerInformation__c/fields/ORDR_REAL_BUY_UNPRC__c.field-meta.xml
<CustomField>
    <fullName>ORDR_REAL_BUY_UNPRC__c</fullName>
    <label>Operating Price</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>