force-app/main/default/objects/SalesLedgerInformation__c/fields/PB_GD_CL__c.field-meta.xml
<CustomField>
    <fullName>PB_GD_CL__c</fullName>
    <label>PB_GD_CL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>[10]PB</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>[20]CJPB</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>[30]CJ</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>[40]NB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>