force-app/main/default/objects/SalesLedgerInformation__c/fields/pb_gd_cl_cd_nm__c.field-meta.xml
<CustomField>
    <fullName>pb_gd_cl_cd_nm__c</fullName>
    <label>pb_gd_cl_cd_nm</label>
    <length>30</length>
    <type>Text</type>
</CustomField>