force-app/main/default/objects/SalesLedgerInformation__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCategory</label>
    <referenceTo>ProductCategory__c</referenceTo>
    <relationshipName>SalesLedgerInformation</relationshipName>
    <type>Lookup</type>
</CustomField>