force-app/main/default/objects/SalesLedgerInformation__c/fields/Profitmargin__c.field-meta.xml
<CustomField>
    <fullName>Profitmargin__c</fullName>
    <formula>fm_SalesProfit__c /  SALES_SUM_AT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>매익률</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>