force-app/main/default/objects/SalesLedgerInformation__c/fields/REAL_BUY_UNPRC__c.field-meta.xml
<CustomField>
    <fullName>REAL_BUY_UNPRC__c</fullName>
    <label>Original Price</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>