force-app/main/default/objects/SalesLedgerInformation__c/fields/REG_DT__c.field-meta.xml
<CustomField>
    <fullName>REG_DT__c</fullName>
    <label>REG_DT</label>
    <type>DateTime</type>
</CustomField>