force-app/main/default/objects/SalesLedgerInformation__c/fields/RLSTK_UNIT_CD_NM__c.field-meta.xml
<CustomField>
    <fullName>RLSTK_UNIT_CD_NM__c</fullName>
    <label>Unit code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>