force-app/main/default/objects/SalesLedgerInformation__c/fields/RLSTK_UNIT_RLSTK_QTY__c.field-meta.xml
<CustomField>
    <fullName>RLSTK_UNIT_RLSTK_QTY__c</fullName>
    <label>Billing quantity</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>