force-app/main/default/objects/SalesLedgerInformation__c/fields/SALE_UNPRC__c.field-meta.xml
<CustomField>
    <fullName>SALE_UNPRC__c</fullName>
    <label>Operating unit price</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>