force-app/main/default/objects/SalesLedgerInformation__c/fields/SALES_LNKG_CL_CD__c.field-meta.xml
<CustomField>
    <fullName>SALES_LNKG_CL_CD__c</fullName>
    <externalId>true</externalId>
    <label>Type code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>