force-app/main/default/objects/SalesLedgerInformation__c/fields/SALES_LNKG_CL_NM__c.field-meta.xml
<CustomField>
    <fullName>SALES_LNKG_CL_NM__c</fullName>
    <label>type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>