force-app/main/default/objects/SalesLedgerInformation__c/fields/SALES_P_RT__c.field-meta.xml
<CustomField>
    <fullName>SALES_P_RT__c</fullName>
    <label>an addition/decrease ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>