force-app/main/default/objects/SalesLedgerInformation__c/fields/sales_seq__c.field-meta.xml
<CustomField>
    <fullName>sales_seq__c</fullName>
    <externalId>true</externalId>
    <label>sales_seq</label>
    <length>10</length>
    <type>Text</type>
</CustomField>