force-app/main/default/objects/SalesLedgerInformation__c/fields/sales_seq_changeTxt__c.field-meta.xml
<CustomField>
    <fullName>sales_seq_changeTxt__c</fullName>
    <label>sales_seq_changeTxt</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>