force-app/main/default/objects/SalesLedgerInformation__c/fields/SALES_SUM_AT__c.field-meta.xml
<CustomField>
    <fullName>SALES_SUM_AT__c</fullName>
    <label>gross sales</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>