force-app/main/default/objects/SalesLedgerInformation__c/fields/SALES_TAT__c.field-meta.xml
<CustomField>
    <fullName>SALES_TAT__c</fullName>
    <label>Surtax</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>