force-app/main/default/objects/SalesLedgerInformation__c/fields/SALES_YMD__c.field-meta.xml
<CustomField>
    <fullName>SALES_YMD__c</fullName>
    <label>Billing date</label>
    <type>Date</type>
</CustomField>