force-app/main/default/objects/SalesLedgerInformation__c/fields/SAP_ERR_MSG__c.field-meta.xml
<CustomField>
    <fullName>SAP_ERR_MSG__c</fullName>
    <label>Remarks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>