force-app/main/default/objects/SalesLedgerInformation__c/fields/SCHL__c.field-meta.xml
<CustomField>
    <fullName>SCHL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SCHL</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>매출원장정보 (SCHL_CD)</relationshipLabel>
    <relationshipName>SalesLedgerInformation</relationshipName>
    <type>Lookup</type>
</CustomField>