force-app/main/default/objects/SalesLedgerInformation__c/fields/SCHL_CD__c.field-meta.xml
<CustomField>
    <fullName>SCHL_CD__c</fullName>
    <externalId>true</externalId>
    <label>SCHL_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>