force-app/main/default/objects/SalesLedgerInformation__c/fields/SLBZ_ORG_ID__c.field-meta.xml
<CustomField>
    <fullName>SLBZ_ORG_ID__c</fullName>
    <label>SLBZ_ORG_ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3000</fullName>
                <label>FS본부</label>
            </value>
            <value>
                <fullName>3001</fullName>
                <label>급식SU</label>
            </value>
            <value>
                <fullName>6000</fullName>
                <label>외식SU</label>
            </value>
            <value>
                <fullName>6001</fullName>
                <label>영업본부직속</label>
            </value>
            <value>
                <fullName>6002</fullName>
                <label>유통SU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>