force-app/main/default/objects/SalesLedgerInformation__c/fields/SLST__c.field-meta.xml
<CustomField>
    <fullName>SLST__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SalesLedgerAccount</relationshipName>
    <type>Lookup</type>
</CustomField>