force-app/main/default/objects/SalesLedgerInformation__c/fields/SLST_ID__c.field-meta.xml
<CustomField>
    <fullName>SLST_ID__c</fullName>
    <externalId>true</externalId>
    <label>Customer code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>